swtpm: fix abort on exit
Some incoming tests require QEMU to exit, simulating a device powering
off, before starting QEMU again. This is used to "reflash" a virtualized
device before continuing with testing, for instance after tampering with
boot files on a secure boot enabled device to verify secure boot checks.

However, swtpm will exit when QEMU disconnects. The `--exit-code-from`
compose argument implies `--abort-on-container-exit`, so this results
in the test run aborting prematurely.

Adapt the entrypoint and command of the swtpm container to always
restart the program without exiting the container.

Change-type: patch
Signed-off-by: Joseph Kogut <joseph@balena.io>

--- a/docker-compose.secureboot.yml
+++ b/docker-compose.secureboot.yml
@@ -10,8 +10,17 @@ services:
     volumes:
       - swtpm:/var/tpm0
     entrypoint:
-      - swtpm
-    command: socket --tpmstate dir=/var/tpm0 --ctrl type=unixio,path=/var/tpm0/swtpm.sock --tpm2
+      - /bin/sh
+      - -c
+    command:
+      - |
+        while true; do
+          swtpm socket \
+            --tpmstate dir=/var/tpm0 \
+            --ctrl type=unixio,path=/var/tpm0/swtpm.sock \
+            --tpm2
+        done
+
   worker:
     volumes:
       - "swtpm:/var/tpm0"
