patch: Update path to balena-io/renovate-config

--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -1,5 +1,5 @@
 {
-  "extends": ["github>balena-io/renovate-config//.github/renovate"],
+  "extends": ["github>balena-io/renovate-config"],
   "regexManagers": [
     {
       "fileMatch": [
