Update balena-cli to v16.1.0 with arm64 binaries
Change-type: minor
Signed-off-by: Kyle Harding <kyle@balena.io>

--- a/core/Dockerfile
+++ b/core/Dockerfile
@@ -28,15 +28,16 @@ RUN apt-get update && apt-get install --no-install-recommends -y \
 	apt-get clean && \
 	rm -rf /var/lib/apt/lists/*
 
-ARG BALENA_CLI_VERSION=v14.3.0
+ARG BALENA_CLI_REF="v16.1.0"
+ARG BALENA_CLI_VERSION="16.1.0"
 
-# Install balena-cli via standlone zip on x86, only compatible with glibc (not alpine/musl)
+# Install balena-cli via standlone zip, only compatible with glibc (not alpine/musl)
 RUN if [ "$(uname -m)" = "arm64" ] || [ "$(uname -m)" = "aarch64" ] ; \
 	then \
-		npm i --production "balena-cli@${BALENA_CLI_VERSION}" && \
-		ln -s node_modules/balena-cli/bin balena-cli ; \
+		wget -q -O balena-cli.zip "https://github.com/balena-io/balena-cli/releases/download/${BALENA_CLI_REF}/balena-cli-v${BALENA_CLI_VERSION}-linux-arm64-standalone.zip" && \
+		unzip balena-cli.zip && rm balena-cli.zip ; \
 	else \
-		wget -q -O balena-cli.zip "https://github.com/balena-io/balena-cli/releases/download/${BALENA_CLI_VERSION}/balena-cli-${BALENA_CLI_VERSION}-linux-x64-standalone.zip" && \
+		wget -q -O balena-cli.zip "https://github.com/balena-io/balena-cli/releases/download/${BALENA_CLI_REF}/balena-cli-v${BALENA_CLI_VERSION}-linux-x64-standalone.zip" && \
 		unzip balena-cli.zip && rm balena-cli.zip ; \
 	fi
 
