--- a/core/package.json
+++ b/core/package.json
@@ -6,6 +6,7 @@
 		"docs": "npx typedoc --tsconfig tsconfig.json"
 	},
 	"dependencies": {
+		"@balena/node-qmp": "^0.0.5",
 		"ajv": "^6.12.6",
 		"ajv-semver": "^1.0.5",
 		"any-promise": "^1.3.0",
@@ -13,11 +14,14 @@
 		"balena-sdk": "^16.32.1",
 		"bluebird": "^3.7.2",
 		"bluebird-retry": "^0.11.0",
+		"etcher-sdk": "^8.5.3",
 		"express": "^4.18.2",
 		"express-ws": "^5.0.2",
-		"fs-extra": "^11.1.0",
+		"find-free-port": "^2.0.0",
+		"fs-extra": "^11.1.1",
 		"lodash": "^4.17.21",
 		"md5-file": "^5.0.0",
+		"multicast-dns": "^7.2.5",
 		"mz": "^2.7.0",
 		"node-ssh": "^13.0.1",
 		"request": "^2.88.2",
@@ -26,10 +30,15 @@
 		"tap": "^16.3.4",
 		"tar-fs": "^2.1.1",
 		"tmp": "^0.2.1",
-		"ws": "^8.12.0"
+		"ws": "^8.12.0",
+		"yargs": "^17.7.2"
 	},
 	"devDependencies": {
 		"@balena/lint": "^6.2.1",
+		"@types/fs-extra": "^11.0.1",
+		"@types/multicast-dns": "^7.2.1",
+		"@types/mz": "^2.7.4",
+		"@types/tmp": "^0.2.3",
 		"typedoc": "0.21.10",
 		"typedoc-plugin-pages-fork": "^0.0.1",
 		"typescript": "^4.4.4"
