tsconfig: target ES2021 for Promise.any support
https://www.typescriptlang.org/tsconfig#lib

Change-type: patch
Signed-off-by: Joseph Kogut <joseph@balena.io>

--- a/core/tsconfig.json
+++ b/core/tsconfig.json
@@ -4,6 +4,7 @@
       "typings",
       "node_modules/@types"
     ],
+    "lib": ["es2021"],
     "module": "commonjs",
     "target": "es2019",
     "allowJs": true,
