tsconfig: enable esModuleInterop
https://www.typescriptlang.org/tsconfig#esModuleInterop

Change-type: patch
Signed-off-by: Joseph Kogut <joseph@balena.io>

--- a/core/tsconfig.json
+++ b/core/tsconfig.json
@@ -5,6 +5,7 @@
       "node_modules/@types"
     ],
     "lib": ["es2021"],
+    "esModuleInterop": true,
     "module": "commonjs",
     "target": "es2019",
     "allowJs": true,
