major: Onboard all containers onto autokit worker
Change-type: major
Signed-off-by: Ryan Cooke <ryan@balena.io>
Co-authored-by: Vipul Gupta (@vipulgupta2048) <vipulgupta2048@gmail.com>

--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -1,4 +1,6 @@
-FROM node:18.16.0-alpine3.16
+ARG BALENA_ARCH=%%BALENA_ARCH%%
+
+FROM balenalib/armv7hf-alpine-node:16-run
 WORKDIR /usr/src/app
 
 # hadolint ignore=DL3018
