Update Core dockerfile to node v16
Signed-off-by: Vipul Gupta (@vipulgupta2048) <vipulgupta2048@gmail.com>

--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -19,4 +19,4 @@ VOLUME /usr/src/app/reports
 
 ENTRYPOINT ["/usr/src/app/entry.sh"]
 
-CMD [ "-c", "/usr/src/app/workspace/config" ]
+CMD [ "-c", "/data/workspace/config" ]
