Optimize: Reduce Core image size & package removal
Signed-off-by: Vipul Gupta (@vipulgupta2048) <vipulgupta2048@gmail.com>

--- a/testrunner/Dockerfile
+++ b/testrunner/Dockerfile
@@ -1,12 +1,12 @@
 # avoid alpine 3.13 or later due to this issue on armv7
 # https://wiki.alpinelinux.org/wiki/Release_Notes_for_Alpine_3.13.0#time64_requirements
-FROM alpine:3.12
+
+FROM balenalib/armv7hf-alpine:3.15-run 
 
 WORKDIR /usr/src/app
 
-# https://github.com/balena-io/balena-cli/blob/master/INSTALL-LINUX.md#additional-dependencies
 # hadolint ignore=DL3018
-RUN apk add --no-cache bash git ca-certificates docker nano make curl
+RUN apk add --no-cache git ca-certificates docker nano make curl
 
 # fail if binaries are missing or won't run
 RUN dockerd --version && docker --version
