--- a/core/Dockerfile
+++ b/core/Dockerfile
@@ -1,6 +1,4 @@
-ARG BALENA_ARCH=%%BALENA_ARCH%%
-
-FROM balenalib/armv7hf-node:16-bullseye as base
+FROM node:16-bullseye-slim as base
 
 WORKDIR /usr/app
 
@@ -12,16 +10,13 @@ ENV DEBIAN_FRONTEND noninteractive
 # hadolint ignore=DL3008
 
 RUN apt-get update && apt-get install --no-install-recommends -y \
-	bind9-dnsutils \
 	ca-certificates \
+	wget \
+	bind9-dnsutils \
 	docker.io \
-	git \
 	iproute2 \
-	jq \
 	openssh-client \
-	socat \
-	libudev-dev \
-	rsync \
+	libudev-dev \	
 	unzip \
 	util-linux \
 	build-essential \
@@ -42,7 +37,8 @@ RUN if [ "$(uname -m)" = "arm64" ] || [ "$(uname -m)" = "aarch64" ] ; \
 	then \
 		npm i balena-cli@latest ; \
 		mkdir /usr/app/cli/ ; \
-		cp -R /usr/app/node_modules/balena-cli/ /usr/app ; \
+		mv /usr/app/node_modules/balena-cli/ /usr/app ; \
+		rm -rf /usr/app/node_modules/ ; \
 	else \
 		wget -q -O balena-cli.zip "https://github.com/balena-io/balena-cli/releases/download/${BALENA_CLI_REF}/balena-cli-v${BALENA_CLI_VERSION}-linux-x64-standalone.zip" && \
 		unzip balena-cli.zip && rm balena-cli.zip ; \
@@ -50,8 +46,7 @@ RUN if [ "$(uname -m)" = "arm64" ] || [ "$(uname -m)" = "aarch64" ] ; \
 
 # Add balena-cli to PATH
 ENV PATH /usr/app/balena-cli:$PATH
-RUN ls /usr/app/balena-cli && ls /usr/app/balena-cli/bin
-ENV PATH $PATH:/usr/app/balena-cli/bin
+# ENV PATH $PATH:/usr/app/balena-cli/bin
 
 RUN balena version
 
