--- a/docker-compose.worker.yml
+++ b/docker-compose.worker.yml
@@ -1,25 +1,25 @@
 version: "2"
 
 services:
-  # client:
-  #   build: ./client
-  #   network_mode: host
-  #   volumes:
-  #     # - "${WORKSPACE:-./workspace}:/usr/src/app/workspace:ro"
-  #     # - "${REPORTS:-./workspace/reports}:/usr/src/app/reports:rw"
-  #     # - "${SUITES:-./suites}:/usr/src/app/suites:ro"
-  #     - "${SUITES:-./suites}:/data/suites"
-  #     - "${REPORTS:-./workspace/reports}:/data/reports"
-  #     - "${WORKSPACE:-./workspace}:/data/workspace"  
-  #   environment:
-  #     - WORKER_TYPE=${WORKER_TYPE}
-  #     - DEVICE_TYPE=${DEVICE_TYPE}
-  #     - BALENACLOUD_API_KEY=${BALENACLOUD_API_KEY}
-  #     - BALENACLOUD_ORG=${BALENACLOUD_ORG}
-  #     - BALENACLOUD_APP_NAME=${BALENACLOUD_APP_NAME}
-  #     - CORE_HOST=localhost
-  #   depends_on:
-  #     - core
+  client:
+    build: ./client
+    network_mode: host
+    volumes:
+      # - "${WORKSPACE:-./workspace}:/usr/src/app/workspace:ro"
+      # - "${REPORTS:-./workspace/reports}:/usr/src/app/reports:rw"
+      # - "${SUITES:-./suites}:/usr/src/app/suites:ro"
+      - "${SUITES:-./suites}:/data/suites"
+      - "${REPORTS:-./workspace/reports}:/data/reports"
+      - "${WORKSPACE:-./workspace}:/data/workspace"  
+    environment:
+      - WORKER_TYPE=${WORKER_TYPE}
+      - DEVICE_TYPE=${DEVICE_TYPE}
+      - BALENACLOUD_API_KEY=${BALENACLOUD_API_KEY}
+      - BALENACLOUD_ORG=${BALENACLOUD_ORG}
+      - BALENACLOUD_APP_NAME=${BALENACLOUD_APP_NAME}
+      - CORE_HOST=localhost
+    depends_on:
+      - core
 
   core:
     privileged: true # preload requires docker-in-docker
@@ -31,9 +31,9 @@ services:
       - "${SUITES:-./suites}:/data/suites"
       - "${REPORTS:-./workspace/reports}:/data/reports"
       - "${WORKSPACE:-./workspace}:/data/workspace"
+      - docker-fs:/var/lib/docker #docker data directory must be in a volume to avoid running out of space
     tmpfs:
       - /var/run # use tmpfs docker-in-docker pid files
-      - /var/lib/docker # use tmpfs for docker-in-docker data root
     restart: 'no'
 
   worker:
@@ -58,3 +58,4 @@ services:
 
 volumes:
   reports-storage:
+  docker-fs:
