patch: Pass env variables to client
Signed-off-by: Vipul Gupta (@vipulgupta2048) <vipulgupta2048@gmail.com>

--- a/docker-compose.client.yml
+++ b/docker-compose.client.yml
@@ -10,9 +10,12 @@ services:
     environment:
       - WORKER_TYPE=${WORKER_TYPE}
       - DEVICE_TYPE=${DEVICE_TYPE}
+      - BALENACLOUD_API_URL=${BALENACLOUD_API_URL}
       - BALENACLOUD_API_KEY=${BALENACLOUD_API_KEY}
       - BALENACLOUD_ORG=${BALENACLOUD_ORG}
       - BALENACLOUD_APP_NAME=${BALENACLOUD_APP_NAME}
+      - BALENACLOUD_SSH_PORT=${BALENACLOUD_SSH_PORT}
+      - BALENACLOUD_SSH_URL=${BALENACLOUD_SSH_URL}
     depends_on:
       - core
 
