--- a/docker-compose.client.yml
+++ b/docker-compose.client.yml
@@ -16,6 +16,9 @@ services:
       - BALENACLOUD_APP_NAME=${BALENACLOUD_APP_NAME}
       - BALENACLOUD_SSH_PORT=${BALENACLOUD_SSH_PORT}
       - BALENACLOUD_SSH_URL=${BALENACLOUD_SSH_URL}
+      - BALENAMACHINE_API_KEY=${BALENAMACHINE_API_KEY}
+      - BALENAMACHINE_API_URL=${BALENAMACHINE_API_URL}
+      - ENVIRONMENT=${ENVIRONMENT}
     depends_on:
       - core
 
