--- a/.github/workflows/flowzone.yml
+++ b/.github/workflows/flowzone.yml
@@ -83,7 +83,7 @@ jobs:
       - name: Run test suite
         run: |
           make config
-          make test
+          make test || exit 1
 
       - uses: actions/upload-artifact@0b7f8abb1508181956e8e162db84b466c27e18ce # v3
         with:
