patch: Resolve dead links in README
Signed-off-by: Vipul Gupta (@vipulgupta2048) <vipulgupta2048@gmail.com>

--- a/core/pagesconfig.json
+++ b/core/pagesconfig.json
@@ -8,6 +8,10 @@
                     "source": "../documentation/quickstart.md",
                     "children": [
                         {
+                            "title": "Autokit worker",
+                            "source": "../documentation/quickstart-autokit.md"
+                        },
+                        {
                             "title": "Testbot worker",
                             "source": "../documentation/quickstart-testbot.md"
                         },
