--- a/core/package.json
+++ b/core/package.json
@@ -26,6 +26,7 @@
 		"tap": "^16.3.4",
 		"tar-fs": "^2.1.1",
 		"tmp": "^0.2.1",
+		"unzipper": "^0.10.14",
 		"ws": "^8.12.0"
 	},
 	"devDependencies": {
