--- a/core/package.json
+++ b/core/package.json
@@ -22,6 +22,7 @@
 		"node-ssh": "^13.0.1",
 		"request": "^2.88.2",
 		"request-promise": "^4.2.6",
+		"split-file": "^2.3.0",
 		"ssh-keygen-lite": "^1.3.0",
 		"tap": "^16.3.4",
 		"tar-fs": "^2.1.1",
