--- a/docker-compose.client.yml
+++ b/docker-compose.client.yml
@@ -23,7 +23,8 @@ services:
       - core
 
   core:
-    privileged: true # preload requires docker-in-docker
+    cap_add:
+      - SYS_ADMIN
     build: core
     volumes:
       - core-storage:/data
