compose: core: replace privileged w/ capabilities
Removes the automatic population of host devices at container startup,
and replaces privileged with fine(r) grained capabilities.

Change-type: patch
Signed-off-by: Joseph Kogut <joseph@balena.io>

--- a/docker-compose.client.yml
+++ b/docker-compose.client.yml
@@ -23,7 +23,9 @@ services:
       - core
 
   core:
-    privileged: true # preload requires docker-in-docker
+    cap_add:
+      - SYS_ADMIN
+      - NET_ADMIN
     build: core
     volumes:
       - core-storage:/data
