compose: core: create losetup devices in entry.sh
Signed-off-by: Joseph Kogut <joseph@balena.io>

--- a/docker-compose.client.yml
+++ b/docker-compose.client.yml
@@ -23,6 +23,10 @@ services:
       - core
 
   core:
+    device_cgroup_rules:
+      # https://www.kernel.org/doc/Documentation/admin-guide/devices.txt
+      # loopback devices
+      - "b 7:* rmw"
     cap_add:
       - SYS_ADMIN
       - NET_ADMIN
