minor: Add Download from URL feature
Signed-off-by: Vipul Gupta (@vipulgupta2048) <vipulgupta2048@gmail.com>

--- a/core/Dockerfile
+++ b/core/Dockerfile
@@ -21,7 +21,7 @@ RUN apt-get update && apt-get install --no-install-recommends -y \
 	unzip \
 	util-linux \
 	wget \
-	vim \
+	curl \
 	build-essential \
 	make \
 	python && \
