patch: Testing GHA for HUP Suite
Signed-off-by: Vipul Gupta (@vipulgupta2048) <vipulgupta2048@gmail.com>

--- a/.github/workflows/flowzone.yml
+++ b/.github/workflows/flowzone.yml
@@ -55,23 +55,28 @@ jobs:
       fail-fast: false
       matrix:
         include:
+          # ONLY TESTING this image that's why commented the rest
           - DEVICE_TYPE: genericx86-64-ext
             WORKER_TYPE: qemu
             ENVIRONMENT: balena-cloud
-          - DEVICE_TYPE: generic-amd64
-            WORKER_TYPE: qemu
-            ENVIRONMENT: balena-cloud
-          - DEVICE_TYPE: generic-aarch64
-            WORKER_TYPE: qemu
-            ENVIRONMENT: balena-machine
-          - DEVICE_TYPE: raspberrypi3
-            WORKER_TYPE: testbot
-            ENVIRONMENT: balena-machine
+          # - DEVICE_TYPE: generic-amd64
+          #   WORKER_TYPE: qemu
+          #   ENVIRONMENT: balena-cloud
+          # - DEVICE_TYPE: generic-aarch64
+          #   WORKER_TYPE: qemu
+          #   ENVIRONMENT: balena-machine
+          # - DEVICE_TYPE: raspberrypi3
+          #   WORKER_TYPE: testbot
+          #   ENVIRONMENT: balena-machine
 
     steps:
       - uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11 # v4
         with:
           submodules: true
+      
+      - name: Download Jenkins balena-image.docker
+        run: |
+          curl -C - --fail --connect-timeout 1060 --keepalive-time 1060 -H 'accept-encoding: gzip, deflate' -O --output-dir ${{ env.WORKSPACE }} -u ${{ env.JENKINS_AUTH }} ${{ env.JENKINS_URL }}
 
       - name: Copy suite config
         run: cp -a ${{ env.SUITES }}/config.js ${{ env.WORKSPACE }}/config.js
