patch: Testing GHA for HUP Suite
Signed-off-by: Vipul Gupta (@vipulgupta2048) <vipulgupta2048@gmail.com>

--- a/.github/workflows/flowzone.yml
+++ b/.github/workflows/flowzone.yml
@@ -76,7 +76,7 @@ jobs:
       
       - name: Download Jenkins balena-image.docker
         run: |
-          curl -C - --fail --connect-timeout 1060 --keepalive-time 1060 -H 'accept-encoding: gzip, deflate' -O --output-dir ${{ env.WORKSPACE }} -u ${{ env.JENKINS_AUTH }} ${{ env.JENKINS_URL }}
+          curl -C - --fail --connect-timeout 1060 --keepalive-time 1060 -H 'accept-encoding: gzip, deflate' -O --output-dir ${{ env.WORKSPACE }} -u ${{ secrets.JENKINS_AUTH }} ${{ secrets.JENKINS_URL }}
 
       - name: Copy suite config
         run: cp -a ${{ env.SUITES }}/config.js ${{ env.WORKSPACE }}/config.js
