--- a/.github/workflows/flowzone.yml
+++ b/.github/workflows/flowzone.yml
@@ -32,6 +32,7 @@ jobs:
       SUITES: ./suites
       REPORTS: ./reports
       WORKSPACE: ./workspace
+      LEVIATHAN_ROOT: ./
       BALENACLOUD_ORG: testbot
       BALENACLOUD_APP_NAME: balena/testbot-rig
       QEMU_CPUS: 1
@@ -83,16 +84,21 @@ jobs:
       - name: Copy suite config
         run: cp -a ${{ env.SUITES }}/config.js ${{ env.WORKSPACE }}/config.js
 
-      - name: Build leviathan images
-        run: |
-          make build
-
-      - name: Run test suite
-        run: |
-          make config
-          make test || exit 1
-
-      - uses: actions/upload-artifact@65462800fd760344b1a7b4382951275a0abb4808 # v4
-        with:
-          name: reports-${{ env.WORKER_TYPE }}-${{ env.DEVICE_TYPE }}
-          path: ${{ env.REPORTS }}
+      - name: Leviathan build + test
+        uses: ./ 
+        env:
+          BALENACLOUD_API_KEY: ${{ env.BALENACLOUD_API_KEY }}
+          BALENACLOUD_API_URL: ${{ env.BALENACLOUD_API_URL }}
+          BALENACLOUD_APP_NAME: ${{ env.BALENACLOUD_APP_NAME }}
+          BALENACLOUD_ORG: ${{ env.BALENACLOUD_ORG }}
+          BALENACLOUD_SSH_PORT: ${{ env.BALENACLOUD_SSH_PORT }}
+          BALENACLOUD_SSH_URL: ${{ env.BALENACLOUD_SSH_URL }}
+          DEVICE_TYPE: ${{ matrix.DEVICE_TYPE }}
+          LEVIATHAN_ROOT: ${{ env.LEVIATHAN_ROOT }}
+          QEMU_CPUS: 1
+          QEMU_MEMORY: "1G"
+          REPORTS: ${{ env.REPORTS }}
+          SUITES: ${{ env.SUITES }}
+          WORKER_TYPE: ${{ matrix.WORKER_TYPE }}
+          WORKSPACE: ${{ env.WORKSPACE }}
+          TEST_SUITE: e2e
