allow for secureboot flasher env var for non-qemu runs
Change-type: patch
Signed-off-by: Ryan Cooke <ryan@balena.io>

--- a/docker-compose.client.yml
+++ b/docker-compose.client.yml
@@ -34,6 +34,9 @@ services:
     restart: 'no'
     devices:
       - /dev:/dev # required for creating losetup devices during preload
+    environment:
+      - FLASHER_SECUREBOOT=${FLASHER_SECUREBOOT}
+    
 
 volumes:
   core-storage:
