Change FAQ docs title to debugging
Signed-off-by: Vipul Gupta (@vipulgupta2048) <vipulgupta2048@gmail.com>

--- a/core/pagesconfig.json
+++ b/core/pagesconfig.json
@@ -30,7 +30,7 @@
                     "source": "../documentation/writing-tests.md"
                 },
                 {
-                    "title": "FAQ",
+                    "title": "Debugging FAQ",
                     "source": "../documentation/debugging.md"
                 },
                 {
