--- a/.github/workflows/flowzone.yml
+++ b/.github/workflows/flowzone.yml
@@ -26,7 +26,7 @@ jobs:
       ((github.event.pull_request.head.repo.full_name == github.repository && github.event_name == 'pull_request') ||
       (github.event.pull_request.head.repo.full_name != github.repository && github.event_name == 'pull_request_target')) &&
       github.event.action != 'closed'
-    runs-on: ubuntu-22.04
+    runs-on: "self-hosted"
 
     env:
       SUITES: ./suites
