--- a/action.yml
+++ b/action.yml
@@ -6,7 +6,7 @@ runs:
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@988b5a0280414f521da01fcc63a27aeeb4b104db # v3
 
-    - name: (Virtual) Leviathan build & test 
+    - name: (Virtual) Leviathan build & test
       working-directory: ${{ env.LEVIATHAN_ROOT }}/
       if: env.WORKER_TYPE == 'qemu'
       shell: bash
@@ -24,15 +24,16 @@ runs:
         make build
         make test
 
-    - name: Create Summary 
+    - name: Create Summary
+      if: always()
       shell: bash
       run: |
         echo "### ${TEST_SUITE} Test Report"  >> $GITHUB_STEP_SUMMARY
-        
+
         echo "| Total Tests | Ran | Passed | Failed | Skipped |" >> $GITHUB_STEP_SUMMARY
         echo "|-------|-----|---------|--------|--------|" >> $GITHUB_STEP_SUMMARY
         jq -r '.[0].stats | "\(.tests) 📋 | \(.ran) 🏃 |  \(.passed) ✅ | \(.failed) ❌ | \(.skipped) ⏭️"' ${REPORTS}/final-result.json >> $GITHUB_STEP_SUMMARY
-        
+
         echo "#### Failed Tests" >> $GITHUB_STEP_SUMMARY
         jq -r '.[0].tests | to_entries[] | select(.value == "failed") | .key' ${REPORTS}/final-result.json >> $GITHUB_STEP_SUMMARY
 
@@ -40,12 +41,15 @@ runs:
         jq -r '.[0].tests | to_entries[] | select(.value == "skipped") | .key' ${REPORTS}/final-result.json >> $GITHUB_STEP_SUMMARY
 
     - uses: actions/upload-artifact@50769540e7f4bd5e21e526ee35c689e35e0d6874 # v4
+      if: always()
       with:
         name: reports-${{ env.WORKER_TYPE }}-${{ env.DEVICE_TYPE }}-${{ env.TEST_SUITE }}
         path: ${{ env.REPORTS }}
 
     - name: Teardown
+      if: always()
+      continue-on-error: true
       shell: bash
-      working-directory: ${{ env.LEVIATHAN_ROOT }} 
+      working-directory: ${{ env.LEVIATHAN_ROOT }}
       run: |
         make down
